Sat Mar  1 10:52:34 2014  Zachary Scott  <e@zzak.io>

	* README.EXT.ja: [DOC] Fix typo "macro macro" @utenmiki [Fixes GH-551]
	  https://github.com/ruby/ruby/pull/551

Fri Feb 28 11:16:55 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c: Fix Numeric#step with 0 unit [Bug #9575]

Thu Feb 27 17:59:01 2014  Zachary Scott  <e@zzak.io>

	* lib/optparse.rb: [DOC] Add example of generating help with optparse.
	  Patch by @joelmccracken documenting-ruby/ruby#19
	  https://github.com/documenting-ruby/ruby/pull/19

Thu Feb 27 12:10:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (ruby_num_interval_step_size): check signs and get rid
	  of implementation dependent behavior of negative division.
	  [ruby-core:61106] [Bug #9570]

Thu Feb 27 03:55:45 2014  Zachary Scott  <e@zzak.io>

	* thread.c: [DOC] Typo in comment for _FORTIFY_SOURCE [Fixes GH-548]
	  Patch by @qnet-herwin https://github.com/ruby/ruby/pull/548

Wed Feb 26 18:43:43 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_pages_free_unused_pages): check tomb page availability
	  at first.
	  And return immediately if we don't touch sorted list any more.

Wed Feb 26 14:10:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): preserve exception class name encoding
	  in debug mode messages.

	* eval.c (setup_exception): preserve errinfo across calling #to_s
	  method on the exception.  [ruby-core:61091] [Bug #9568]

Wed Feb 26 01:29:27 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (sym_find): Add Symbol.find(str), which returns whether given
	  string is defined as symbol or not. [Feature #7854]

Tue Feb 25 22:52:02 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/dl/dl.c (rb_dl_realloc): use NUM2SIZET instead of NUM2INT.

	* ext/fiddle/fiddle.c (rb_fiddle_realloc): ditto.

Tue Feb 25 22:49:30 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/dl/dl.c (rb_dl_malloc): use NUM2SIZET instead of NUM2INT.
	  Coverity Scan found this bug.
